--- a/html/command.html
+++ b/html/command.html
@@ -396,6 +396,9 @@
 of space when every command will end up using the same context. A lighter-weight option is to pass it in when you execute the command. This is what the <a class="pattern" href="context-parameter.html">Context Parameter</a> pattern is about.</p>
 </li>
 <li>
+<p>You may end up with a lot of different command classes. In order to make it easier to implement those, it&#x2019;s often helpful to define a concrete base class with a bunch of convenient high-level methods that the derived commands can compose to define their behavior. That turns the command&#x2019;s main <code>execute</code> method into a <a href="subclass-sandbox.html" class="pattern">Subclass Sandbox</a>.</p>
+</li>
+<li>
 <p>In our examples, we explicitly chose which actor would handle a command. In some cases, especially where your object model is hierarchical, it may not be so cut-and-dried. An object may respond to a command, or it may decide to pawn it off on some subordinate object. If you do that, you&#x2019;ve got yourself a <a class="gof-pattern" href="http://en.wikipedia.org/wiki/Chain-of-responsibility_pattern">Chain of Responsibility</a>.</p>
 </li>
 <li>
